# SPO_Group11

./: .gitignore  README.md
.github/workflows/: backend.yml
backend/: docker-compose.yml  package-lock.json  package.json  setupDatabase.js
backend/app/: package-lock.json  package.json
backend/app/models/: transactionModel.js  userModels.js
backend/app/routes/: transactionRoute.js  userRoutes.js
backend/app/src/: config.js  database.js  main.js  server.js
backend/app/src/models/: administratorModel.js  cardAccountModel.js  cardModel.js  transactionModel.js  userModels.js
backend/app/src/routers/: administratorRouter.js  cardAccountRouter.js  cardRouter.js  transactionRoute.js  userRoutes.js
backend/app/tests/: globalSetup.js  globalTeardown.js  transactionRoute.test.js  userRoutes.test.js
backend/app/tests/routes/: administratorRoutes.test.js  cardAccountRoutes.test.js  cardRoutes.test.js  friendRoutes.test.js  transactionRoute.test.js  userRoutes.test.js
backend/database/: database.Dockerfile  init.sql
backend/docker/: init.sql  insertTestData.sql
backend/public/: index.html  row.html  tables.html
backend/public/css/: style.css
backend/sql/: clean_sql.sh  init.sql  insertTestData.sql  min.sql
backend/src/: config.js  database.js  logging.js  main.js  responses.js  server.js
backend/src/middleware/: adminAuth.js  errorHandling.js  userAuth.js
backend/src/models/: accountModel.js  administratorModel.js  cardAccountModel.js  cardModel.js  friendModel.js  preWithdrawModel.js  transactionModel.js
backend/src/routers/: accountRouter.js  adminLoginRouter.js  balanceRouter.js  cardRouter.js  friendRouter.js  getTransactionsRouter.js  loginRouter.js  preWithdrawRouter.js  userRoutes.js  withdrawRouter.js
backend/src/routers/crud/: accountRouter.js  administratorRouter.js  cardAccountRouter.js  cardRouter.js  friendRouter.js  transactionRouter.js  userRouter.js
backend/tests/: globalSetup.js
backend/tests/routes/: accountRoutes.test.js  administratorRoutes.test.js  balanceRoutes.test.js  cardAccountRoutes.test.js  cardRoutes.test.js  friendRoutes.test.js  getTransactionsRoutes.test.js  loginRoutes.test.js  preWithdrawRoute.test.js  transactionRoute.test.js  transactionRoutes.test.js  userRoutes.test.js  withdraw.test.js  withdrawRoute.test.js
docker/: docker-compose.yml
frontend/: CMakeLists.txt  clean.sh  readme.md  style.qss
frontend/forms/: balance.ui  login.ui  mainwindow.ui  menu.ui  status.ui  transactions.ui  withdraw.ui
frontend/inc/: login.h  mainwindow.h  menu.h
frontend/include/: balance.h  login.h  mainwindow.h  menu.h  status.h  transactions.h  withdraw.h
frontend/lib/CardReader/: CMakeLists.txt  CardReader_global.h  cardreader.cpp  cardreader.h  readme.md
frontend/lib/REST/: CMakeLists.txt  rest.cpp  rest.h
frontend/src/: balance.cpp  login.cpp  main.cpp  mainwindow.cpp  mainwindow.h  menu.cpp  status.cpp  transactions.cpp  withdraw.cpp
